MortgageCalc/force-app/main/default/objects/MortgageCalculator__c/MortgageCalculator__c.object-meta.xml
<CustomObject>
    <label>MortgageCalculator</label>
    <nameField>
        <label>MortgageCalculator Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MortgageCalculators</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>