MortgageCalc/force-app/main/default/objects/MortgageCalculator__c/fields/insurance__c.field-meta.xml
<CustomField>
    <fullName>insurance__c</fullName>
    <label>insurance</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>