MortgageCalc/force-app/main/default/objects/MortgageCalculator__c/fields/Length_of_loan__c.field-meta.xml
<CustomField>
    <fullName>Length_of_loan__c</fullName>
    <label>Length of loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>30 Years, 20 Years, 15 Years, 10 Years</fullName>
                <default>true</default>
                <label>30 Years, 20 Years, 15 Years, 10 Years</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>