MortgageCalc/force-app/main/default/objects/MortgageCalculator__c/fields/monthly__c.field-meta.xml
<CustomField>
    <fullName>monthly__c</fullName>
    <label>monthly</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>