MortgageCalc/force-app/main/default/objects/MortgageCalculator__c/fields/tax__c.field-meta.xml
<CustomField>
    <fullName>tax__c</fullName>
    <label>tax</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>